force-app/main/default/objects/CartDeliveryGroup/fields/CollectionPoint__c.field-meta.xml
<CustomField>
    <fullName>CollectionPoint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the Porcelanosa Address where the customer will collect the goods</description>
    <label>Collection Point</label>
    <referenceTo>PorcelanosaAddress__c</referenceTo>
    <relationshipLabel>Cart Delivery Groups (Collection Point)</relationshipLabel>
    <relationshipName>CartDeliveryGroups2</relationshipName>
    <type>Lookup</type>
</CustomField>