force-app/main/default/objects/CartDeliveryGroup/fields/ContactPointAddressId__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddressId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Address Id</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Cart Delivery Groups2</relationshipLabel>
    <relationshipName>CartDeliveryGroups2</relationshipName>
    <type>Lookup</type>
</CustomField>