force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_ContactPointAddress__c.field-meta.xml
<CustomField>
    <fullName>NB2B_ContactPointAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Cart Delivery Groups</relationshipLabel>
    <relationshipName>Cart_Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>