force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>NB2B_DeliveryDate__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>