force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_Firm__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Firm</label>
    <type>Checkbox</type>
</CustomField>