force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_OrderCode__c.field-meta.xml
<CustomField>
    <fullName>NB2B_OrderCode__c</fullName>
    <label>Order code</label>
    <length>35</length>
    <type>Text</type>
</CustomField>