force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_Porcelanosa_Address__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Porcelanosa_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Porcelanosa Address</label>
    <referenceTo>PorcelanosaAddress__c</referenceTo>
    <relationshipLabel>Cart Delivery Groups</relationshipLabel>
    <relationshipName>Cart_Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>