force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>NB2B_SalesOrg__c</fullName>
    <label>Sales Organization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>