force-app/main/default/objects/CartDeliveryGroup/fields/NB2B_Store_Pickup__c.field-meta.xml
<CustomField>
    <fullName>NB2B_Store_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup</label>
    <type>Checkbox</type>
</CustomField>