force-app/main/default/objects/CartDeliveryGroup/fields/PorcelanosaAddress__c.field-meta.xml
<CustomField>
    <fullName>PorcelanosaAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Porcelanosa Address</label>
    <referenceTo>PorcelanosaAddress__c</referenceTo>
    <relationshipLabel>B2B Deliveries</relationshipLabel>
    <relationshipName>B2BDeliveries</relationshipName>
    <type>Lookup</type>
</CustomField>