force-app/main/default/objects/CartDeliveryGroup/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Sales Organization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>