force-app/main/default/objects/CartDeliveryGroup/fields/ShippingCost__c.field-meta.xml
<CustomField>
    <fullName>ShippingCost__c</fullName>
    <label>Shipping Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>