force-app/main/default/objects/CartDeliveryGroup/fields/ShippingPending__c.field-meta.xml
<CustomField>
    <fullName>ShippingPending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to signal that there&apos;s a shipping calculation waiting to be confirmed by the cart extension</description>
    <label>Shipping Pending</label>
    <type>Checkbox</type>
</CustomField>