force-app/main/default/objects/CartDeliveryGroup/fields/XXX_NB2B_Firm__c.field-meta.xml
<CustomField>
    <fullName>XXX_NB2B_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXXFirm</label>
    <type>Checkbox</type>
</CustomField>