force-app/main/default/objects/CartDeliveryGroup/fields/XXXDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>XXXDeliveryDate__c</fullName>
    <label>XXXDelivery Date</label>
    <type>Date</type>
</CustomField>