force-app/main/default/objects/CartDeliveryGroup/fields/XXXNB2B_Store_Pickup__c.field-meta.xml
<CustomField>
    <fullName>XXXNB2B_Store_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XXXPickup</label>
    <type>Checkbox</type>
</CustomField>