force-app/main/default/objects/CartDeliveryGroup/fields/XXXPONumber__c.field-meta.xml
<CustomField>
    <fullName>XXXPONumber__c</fullName>
    <label>XXXPO Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>